[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/Scripts/Main2P.gd" type="Script" id=1]
[ext_resource path="res://Starship.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scripts/Starship2P.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/LeftLane.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scripts/RightLane.gd" type="Script" id=5]
[ext_resource path="res://Assets/Scripts/SpaceParticles.gd" type="Script" id=6]
[ext_resource path="res://SpaceParticle.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sound/alien_beacon.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Textures/space_bg.jpg" type="Texture" id=9]
[ext_resource path="res://EnergyBar.gd" type="Script" id=10]
[ext_resource path="res://Assets/Fonts/New Athletic M54.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://TimerLabelMain.gd" type="Script" id=12]
[ext_resource path="res://MessageMain.gd" type="Script" id=13]
[ext_resource path="res://Assets/Fonts/techno_hideo_bold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Assets/Scripts/LevelMessage.gd" type="Script" id=15]
[ext_resource path="res://Assets/Scripts/ExitSubmit.gd" type="Script" id=16]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 9 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.518741, 0.523438, 0.437561, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 0.1
fog_color = Color( 0.263214, 0.278091, 0.292969, 1 )
fog_sun_color = Color( 0.663973, 0.667969, 0.540115, 1 )
glow_enabled = true
glow_intensity = 1.0
glow_bloom = 1.0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 100.0
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
angular_velocity = 0.141732

[sub_resource type="SpatialMaterial" id=4]
roughness = 0.5
emission_enabled = true
emission = Color( 0.714844, 0.846283, 1, 1 )
emission_energy = 8.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.5, 0.5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.5625, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0429688, 0.0409546, 0.0409546, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.136719, 0.126572, 0.126572, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.173828, 0.695313, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.09375, 0.0922852, 0.0922852, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.152344, 0.135086, 0.135086, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0585938, 0.0574493, 0.0574493, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 64
extra_spacing_char = 2
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=12]
size = 64
font_data = ExtResource( 14 )

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="StarshipP1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40 )

[node name="StarshipP2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )
script = ExtResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 18.5991, 0 )

[node name="LeftLane1P" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -60 )
script = ExtResource( 4 )

[node name="CenterLane1P" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40 )

[node name="RightLane1P" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
script = ExtResource( 5 )

[node name="LeftLane2P" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
script = ExtResource( 4 )

[node name="CenterLane2P" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40 )

[node name="RightLane2P" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 60 )
script = ExtResource( 5 )

[node name="Entrance" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.0239, 0, 0 )

[node name="SpaceParticles" type="Spatial" parent="."]
script = ExtResource( 6 )
SpaceParticle = ExtResource( 7 )
num_particles = 15

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AmbientSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
unit_db = -6.0
unit_size = 2.0
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="WorldEnvironment"]
transform = Transform( -4.37114e-008, 0.0871557, -0.996195, 0, 0.996195, 0.0871557, 1, 3.8097e-009, -4.35451e-008, -60, 36.047, 0 )
current = true
fov = 60.0
size = 5.0
far = 1000.0

[node name="Particles" type="Particles" parent="WorldEnvironment/Camera"]
transform = Transform( 1, 0, 5.68434e-014, -4.44089e-016, 1, -1.65893e-016, -5.32907e-014, -1.65894e-016, 1, -1.36424e-012, 1.90735e-006, -500 )
amount = 50
lifetime = 10.0
preprocess = 5.0
speed_scale = 2.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="UI" type="Container" parent="."]
margin_left = 4.0
margin_right = 1027.0
margin_bottom = 601.0

[node name="EnergyBarP1" type="ProgressBar" parent="UI"]
margin_left = 14.0
margin_top = 10.0
margin_right = 259.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
step = 1.0
percent_visible = false
script = ExtResource( 10 )

[node name="EnergyBarP2" type="ProgressBar" parent="UI"]
margin_left = 745.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
step = 1.0
percent_visible = false
script = ExtResource( 10 )

[node name="ShieldBarP1" type="ProgressBar" parent="UI"]
margin_left = 14.0
margin_top = 35.0
margin_right = 259.0
margin_bottom = 56.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0

[node name="ShieldBarP2" type="ProgressBar" parent="UI"]
margin_left = 745.0
margin_top = 35.0
margin_right = 990.0
margin_bottom = 56.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
step = 1.0

[node name="Timer" type="Label" parent="UI"]
margin_left = 440.0
margin_top = 27.0
margin_right = 470.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 10 )
text = "25.6"
align = 1
script = ExtResource( 12 )

[node name="Message" type="Label" parent="UI"]
visible = false
margin_left = 415.0
margin_top = 240.0
margin_right = 654.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.6875, 0, 0, 1 )
text = "is the winner after "
align = 1
script = ExtResource( 13 )

[node name="LevelMessage" type="Label" parent="UI"]
visible = false
margin_left = 397.0
margin_top = 66.0
margin_right = 664.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.738281, 0.766907, 1, 1 )
text = "1"
align = 1
script = ExtResource( 15 )

[node name="LevelMTimer" type="Timer" parent="UI/LevelMessage"]
wait_time = 3.0

[node name="ExitSubmit" type="Button" parent="UI"]
pause_mode = 1
visible = false
margin_left = 607.0
margin_top = 520.0
margin_right = 719.0
margin_bottom = 541.0
text = "Main Menu"
script = ExtResource( 16 )
[connection signal="player_dead" from="StarshipP1" to="." method="_on_Starship_player_dead"]
[connection signal="player_dead" from="StarshipP2" to="." method="_on_StarshipP2_player_dead"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="UI/LevelMessage/LevelMTimer" to="UI/LevelMessage" method="_on_LevelMTimer_timeout"]
[connection signal="pressed" from="UI/ExitSubmit" to="." method="_on_NameSubmit_pressed"]
